--- a/css/main.scss
+++ b/css/main.scss
@@ -120,3 +120,23 @@ strong {
 .docs-content h2+h3 {
   margin-top: 20px;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  position: relative;
+
+  .anchor {
+    position: relative;
+    padding-right: 4px;
+    margin-left: -20px;
+    line-height: 1;
+    font-size: 17px;
+    visibility: hidden;
+  }
+}
+
+h1:hover, h2:hover, h3:hover,
+h4:hover, h5:hover, h6:hover {
+  .anchor {
+    visibility: visible;
+  }
+}
