--- a/css/main.scss
+++ b/css/main.scss
@@ -140,3 +140,12 @@ h4:hover, h5:hover, h6:hover {
     visibility: visible;
   }
 }
+
+.site-wrapper > footer {
+  text-align: center;
+  width: 100%;
+  height: 60px;
+  line-height: 20px;
+  padding-top: 20px;
+  margin-top: 120px;
+}
