Add link to GitHub page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,11 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/docs">Docs</a></li>
       <li><a href="/blog">Blog</a></li>
+      <li>
+        <a href="https://github.com/sourcelair/xterm.js">
+        	<i class="fa fa-github"></i>
+        </a>
+      </li>
     </ul>
   </div><!-- /.container-fluid -->
 </nav>
