--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
+{% if page.no_header != true %}
 <header>
 	<h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
 </header>
+{% endif %}
 
 <article class="page-content">{{ content }}</article>
