--- a/css/main.scss
+++ b/css/main.scss
@@ -150,4 +150,17 @@ h4:hover, h5:hover, h6:hover {
   margin-top: 120px;
 }
 
+.docs-version {
+  display: inline-block;
+  padding: .1em .4em;
+  vertical-align: middle;
+  font-size: 18px;
+  font-weight: 200;
+  -webkit-font-smoothing: initial;
+  color: #7c9398;
+  border: 1px solid #d1d9db;
+  border-radius: 3px;
+
+}
+
 @import 'code';
