--- a/css/main.scss
+++ b/css/main.scss
@@ -26,6 +26,9 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$link-color:       #337ab7;
+$link-hover-color: #23527c;
+
 body {
   font-family: $base-font-family;
   font-size: $base-font-size;
