--- a/css/main.scss
+++ b/css/main.scss
@@ -116,8 +116,12 @@ strong {
   margin-right: 6px;
 }
 
+.docs-content h2 {
+  margin-top: 42px;
+}
+
 .docs-content h3 {
-  margin-top: 64px;
+  margin-top: 32px;
 }
 
 .docs-content h2+h3 {
