--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header>
-	<h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
+	<h1>{% if page.category == "addon" %}Addons / {% endif %}<a href="{{ page.url }}">{{ page.title }}</a></h1>
 </header>
 
 <article class="docs-content">{{ content }}</article>
