Generate docs for addons

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -3,9 +3,7 @@ layout: default
 ---
 
 <header>
-  {% unless page.category contains "API" %}
-	<h1>{% if page.category == "addon" %}Addons / {% endif %}<a href="{{ page.url }}">{{ page.title }}</a></h1>
-  {% endunless %}
+	<h1>{% if page.category == "addons-modules" %}Addons / {% endif %}<a href="{{ page.url }}">{{ page.title }}</a></h1>
 </header>
 
 <article class="docs-content">{{ content }}</article>
