--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	Proudly sponsored by <a href="https://www.sourcelair.com/">SourceLair</a> with the help of <a href="https://github.com/sourcelair/xterm.js/blob/master/AUTHORS">many amazing contributors</a>.
+	Proudly brought to you by <a href="https://www.sourcelair.com/">SourceLair</a> and the <a href="https://github.com/xtermjs/xterm.js/graphs/contributors">xterm.js authors</a>.
 </footer>
