Update using addons page and fix several links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
       <li><a href="/docs">Docs</a></li>
       <li><a href="/blog">Blog</a></li>
       <li>
-        <a href="https://github.com/sourcelair/xterm.js">
+        <a href="https://github.com/xtermjs/xterm.js">
         	<i class="fa fa-github"></i>
         </a>
       </li>
