--- a/_includes/demo.html
+++ b/_includes/demo.html
@@ -1,5 +1,5 @@
 <h2 id="demo">Demo</h2>
 <div id="terminal"></div>
-<link rel="stylesheet" href="https://unpkg.com/xterm/dist/xterm.css" />
-<script src="https://unpkg.com/xterm/dist/xterm.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/xterm/css/xterm.css" />
+<script src="https://unpkg.com/xterm/lib/xterm.js"></script>
 <script src="{{ "/js/demo.js" | prepend: site.baseurl }}"></script>
