Add npm install with copy button

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -10,4 +10,26 @@
         margin: 1em auto;
         opacity: 0.8;
     }
+
+    .npm-install {
+        display: flex;
+        width: 300px;
+        margin: auto;
+        justify-content: space-between;
+        background-color: #F8F8F8;
+        padding: 5px 14px 5px 20px;
+        border-radius: 4px;
+        .text {
+            font-family: monospace;
+            padding: 2px 0;
+        }
+        .copy {
+            border: 0;
+            background: none;
+            padding: 2px 6px;
+            &:hover {
+                background-color: #00000020;
+            }
+        }
+    }
 }
