Roll feature callouts into the demo itself

--- a/_includes/demo.html
+++ b/_includes/demo.html
@@ -1,5 +1,6 @@
-<h2 id="demo">Demo</h2>
-<div id="terminal"></div>
+<div class="demo">
+    <div class="inner"></div>
+</div>
 <link rel="stylesheet" href="https://unpkg.com/xterm@4.13.0/css/xterm.css" />
 <script src="https://unpkg.com/xterm@4.13.0/lib/xterm.js"></script>
 <script src="{{ "/js/demo.js" | prepend: site.baseurl }}"></script>
