--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -41,6 +41,9 @@
     .inner {
         padding: 10px 20px;
         border-radius: 4px;
-        background-color: #000;
+        background-color: #2D2E2C;
+        &.other-theme {
+            background-color: #282a36;
+        }
     }
 }
