--- a/_includes/demo.html
+++ b/_includes/demo.html
@@ -3,4 +3,5 @@
 </div>
 <link rel="stylesheet" href="https://unpkg.com/xterm@4.13.0/css/xterm.css" />
 <script src="https://unpkg.com/xterm@4.13.0/lib/xterm.js"></script>
+<script src="https://unpkg.com/xterm-addon-webgl@0.11.1/lib/xterm-addon-webgl.js"></script>
 <script src="{{ "/js/demo.js" | prepend: site.baseurl }}"></script>
