Increase margin after demo

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -37,7 +37,7 @@
 .demo {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
+    margin: 20px 0 50px;
     .inner {
         padding: 10px 20px;
         border-radius: 4px;
