--- a/css/main.scss
+++ b/css/main.scss
@@ -186,24 +186,21 @@ h4:hover, h5:hover, h6:hover {
 }
 
 .link-hint-decoration {
-  background-color: #ff4500;
-  position: relative;
-  display: inline-block;
+  background-color: #5f5d5d;
   padding: .2em .5em;
-  border-radius: 15px;
+  border-radius: 7px;
 }
 
 .link-hint-decoration::after {
-  border-bottom: 10px solid #ff4500;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
+  border-bottom: 6px solid #5f5d5d;
+  border-left: 6px solid transparent;
+  content: "";
   width: 0;
   height: 0;
-  content: "";
   display: block;
   position: absolute;
   bottom: 100%;
-  left: 1em;
+  right: 0px;
 }
 
 @import 'code';
