Collapse real-world uses by default

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -47,3 +47,12 @@
         }
     }
 }
+
+details summary {
+  cursor: pointer;
+  display: list-item !important;
+
+  > * {
+    display: inline;
+  }
+}
