make foreign resources to local ones

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <link href="/favicon.ico" rel="shortcut icon">
+  <link href="/images/favicon.png" rel="shortcut icon">
 
   {% include head.html %}
 
