--- a/_includes/demo.html
+++ b/_includes/demo.html
@@ -1,7 +1,7 @@
 <div class="demo">
     <div class="inner"></div>
 </div>
-<link rel="stylesheet" href="https://unpkg.com/xterm@4.18.0/css/xterm.css" />
+<link rel="stylesheet" href="{{ '/css/xterm.css' | prepend: site.baseurl }}" />
 <style>
 .xterm-viewport.xterm-viewport {
     scrollbar-width: thin;
@@ -17,6 +17,6 @@
     background-color: #ffffff20;
 }
 </style>
-<script src="https://unpkg.com/xterm@4.18.0/lib/xterm.js"></script>
-<script src="https://unpkg.com/xterm-addon-webgl@0.12.0-beta.15/lib/xterm-addon-webgl.js"></script>
-<script src="{{ "/js/demo.js" | prepend: site.baseurl }}"></script>
+<script src="{{ '/js/xterm.js' | prepend: site.baseurl }}"></script>
+<script src="{{ '/js/xterm-addon-webgl.js' | prepend: site.baseurl }}"></script>
+<script src="{{ '/js/demo.js' | prepend: site.baseurl }}"></script>
