--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,11 +16,11 @@
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
   <!-- Social media cards end -->
 
-  <link rel="shortcut icon" type="image/png" href="{{ "/images/favicon.png" | prepend: site.baseurl }}" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.6/dist/css/bootstrap.min.css" />
-  <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="shortcut icon" type="image/png" href="{{ '/images/favicon.png' | prepend: site.baseurl }}" />
+  <link rel="stylesheet" href="{{ '/css/bootstrap.min.css' | prepend: site.baseurl }}" />
+  <link href="{{ '/css/fonts.css' | prepend: site.baseurl }}" rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
-  <script src="https://use.fontawesome.com/47de3a5ce8.js"></script>
+  <script src="{{ '/js/jquery-3.1.1.slim.min.js' | prepend: site.baseurl }}"></script>
+  <link rel="stylesheet" href="{{ '/css/fontawesome.css' | prepend: site.baseurl }}">
 </head>
