--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
       <li><a href="/blog">Blog</a></li>
       <li>
         <a href="https://github.com/xtermjs/xterm.js">
-        	<i class="fa fa-github"></i>
+        	<i class="fa-brands fa-github"></i>
         </a>
       </li>
     </ul>
