chore: fix issues with dependency upgrade

--- a/_includes/demo.html
+++ b/_includes/demo.html
@@ -18,5 +18,5 @@
 }
 </style>
 <script src="{{ '/js/xterm.js' | prepend: site.baseurl }}"></script>
-<script src="{{ '/js/xterm-addon-webgl.js' | prepend: site.baseurl }}"></script>
+<script src="{{ '/js/addon-webgl.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/js/demo.js' | prepend: site.baseurl }}"></script>
